# inventorix

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN-DOC.md  README.md  ROADMAP.md  TODOS.md
.cargo/: config.toml
migrations/: 20260330_initial.sql  20260331_user_sessions.sql  20260401_add_rejected_refill_status.sql  20260402_chat_give_outs.sql  20260403_note_edits.sql  20260404_rejection_reason.sql  20260405_scan_audits.sql
src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/auth/: extractor.rs  routes.rs
src/jobs/: timers.rs
src/models/: branch.rs  chat_message.rs  mod.rs  refill_request.rs  tile.rs  user.rs
src/routes/: admin.rs  analytics.rs  chat.rs  export.rs  health.rs  history.rs  import.rs  mod.rs  refill.rs  scan.rs  tiles.rs
src/salesforce/: client.rs
src/ws/: manager.rs
static/css/: app.css
templates/: base.html  login.html
templates/admin/: page.html
templates/analytics/: page.html
templates/export/: digest.html
templates/history/: page.html
templates/import/: page.html  result.html
templates/inventory/: row.html  table.html
templates/scan/: page.html  print-qr.html
templates/tiles/: card.html  chat-messages.html  detail.html
tests/: admin.rs  auth.rs  helpers.rs  import.rs  p0_branch_isolation.rs  p0_role_enforcement.rs  refill.rs  validation.rs  ws.rs
