[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "inventorix-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "inventorix_server"
path = "src/lib.rs"

[[bin]]
name = "inventorix-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart", "form"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
    "chrono",
] }

# Templates
tera = "1"

# Sessions
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }

# Password hashing
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }

# Excel import/export
calamine = { version = "0.26", features = ["dates"] }
rust_xlsxwriter = "0.79"

# HTTP client (Salesforce outbound)
reqwest = { version = "0.12", features = ["json"] }

# Real-time / WebSocket
dashmap = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
axum-test = "19"
rust_xlsxwriter = "0.79"
