[package]
name = "inventorix"
version = "0.1.0"
edition = "2021"

[lib]
name = "inventorix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-barcode-scanner = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Server crate — Axum server is spawned inside the Tauri process (desktop only)
inventorix-server = { path = ".." }
